# Yara-Forge

./: .commitlintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  release-plz.toml  rustfmt.toml
.github/: changelog.json
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: rule_generation.rs
examples/: advanced_rule.rs  basic_rule.rs  comprehensive.rs  error_handling.rs  validation.rs
src/: lib.rs
src/patterns/: mod.rs
src/templates/: mod.rs
src/utils/: mod.rs
src/validation/: mod.rs
